--- a/css/selector1.css
+++ b/css/selector1.css
@@ -1,7 +1,7 @@
 
 
-@namespace svgNamespace url('http://www.w3.org/2000/svg');
-@namespace htmlNameSpace url('http://www.w3.org/1999/xhtml');
+/* @namespace svgNamespace url('http://www.w3.org/2000/svg');
+@namespace htmlNameSpace url('http://www.w3.org/1999/xhtml'); */
 
 * {
   margin: 0;
