--- a/css/background.css
+++ b/css/background.css
@@ -19,7 +19,7 @@ background (shorthand) → combines all */
     
     /* The background-image property is used to set one or more images as the background of an HTML element.
     It can be applied to the whole page (body) or to a specific element (div, p, etc.). */
-    background-image: url(../image/GT\ 650.jpg);
+    background-image: url(..//image/Teamwork.jpg
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
