--- a/css/font style .css
+++ b/css/font style .css
@@ -24,7 +24,7 @@ font-style → normal | italic | oblique
 }
 
 body {
-    border: 1px solid purple;
+    border: 1px solid rgb(241, 79, 171);
 }
 
 .content {
