--- a/css/hover.css
+++ b/css/hover.css
@@ -4,8 +4,8 @@ Commonly used for links, buttons, images, menus, and interactive effects. */
 .btn{
     width: 250px;
     height: 50px;
-    background-color: blue;
-    color: aliceblue;
+    background-color: rgb(28, 72, 216);
+    color:black(205, 207, 210, 0);
     border: none;
     outline: none;
     text-transform: capitalize;
@@ -17,8 +17,8 @@ Commonly used for links, buttons, images, menus, and interactive effects. */
 
 .btn:hover{
    cursor: pointer;
-   background-color: black;
-   color: red;
+   background-color: rgb(207, 224, 55);
+   color: rgb(255, 0, 234);
    text-transform: uppercase;
    border-radius: 10px;
    transition: all 0.3sec ease-in-out;
@@ -30,7 +30,7 @@ Commonly used for links, buttons, images, menus, and interactive effects. */
 
 .btn::after{
     content: '  button ' ;
-    border: 2px solid greenyellow;
+    border: 2px solid rgb(47, 245, 255);
 }
 
 
