--- a/css/importants.css
+++ b/css/importants.css
@@ -7,12 +7,12 @@ h1 {
     text-transform: uppercase;
 }
 h1 {
-    color: purple ;
+    color: rgb(253, 77, 253) ;
     background-color: greenyellow;
 }
  h1 {
-    color: red !important;
-    background-color: gold !important;
+    color: rgb(102, 210, 229) !important;
+    background-color: rgb(0, 13, 255) !important;
     text-transform: capitalize;
  }
 
