--- a/css/scale.css
+++ b/css/scale.css
@@ -18,7 +18,7 @@ If only one value → both X and Y use the same. */
 }
 
 body {
-    border: 1px solid red;
+    border: 1px solid rgb(0, 251, 255);
     height: 90vh;
 }
  
